# monte-carlo-control-variate-lab

./: README.md  pyproject.toml
results/: path_count_study.csv  path_count_study.json  reference_estimate.json
src/monte_carlo_control_variate_lab/: __init__.py  __main__.py  black_scholes.py  charts.py  estimators.py  experiments.py
tests/: test_control_variate.py
